--- a/src/tile-content/_tile-content.scss
+++ b/src/tile-content/_tile-content.scss
@@ -234,7 +234,8 @@
       }
 
       .tile-content {
-        height: 88px;
+        height: 100%;
+        padding: 0;
         margin-right: 155px;
       }
 
